test/files/neg/t6595.check
t6595.scala:5: warning: early initializers are deprecated; use trait parameters instead.
class Foo extends {
                  ^
error: No warnings can be incurred under -Werror.
one warning found
one error found
